# omero

./: Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  test.py  u.py  x.py  z.py
.arkitekt/: builds.yaml  deployments.yaml  manifest.yaml
.arkitekt/cache/: omero-0.0.14_cache.json  omero-0.0.14_herre_cache.json  omero-0.0.9_cache.json  omero-0.0.9_herre_cache.json  omero-dev_cache.json  omero-dev_herre_cache.json  omero-latest_cache.json  omero-latest_herre_cache.json
.devcontainer/: devcontainer.json  docker-compose.yml
