[tool.poetry]
name = "omero"
version = "0.1.0"
description = ""
authors = ["jhnnsrs <jhnnsrs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
aicsimageio = "^4.9.3"
bioformats-jar = "^2020.5.27"
tifffile = "^2022.10.10"
readlif = ">=0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
